kubernetes/deployment-debug.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-debug-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webserver
  template:
    metadata:
      name: my-debug-pod
      labels:
        app: webserver
    spec:
      containers:
        - name: curl
          image: alicek106/ubuntu:curl
          command: ["sleep"]
          args: ["1d"]
