kubernetes/emptydir-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: emptydir-pod

spec:
  containers:
  - name: emptydir-container
    image: alicek106/alpine-wget:latest
    args: ["tail", "-f", "/dev/null"]
    volumeMounts:
      - mountPath: /data
        name: my-emptydir-volume
  
  - name: apache-webserver
    image: httpd:2
    volumeMounts:
      - mountPath: /usr/local/apache2/htdocs/
        name: my-emptydir-volume

  volumes:
    - name: my-emptydir-volume
      emptyDir: {}
