kubernetes/hostpath-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: hostpath-pod

spec:
  containers:
  - name: hostpath-container
    image: busybox
    args: ["tail", "-f", "/dev/null"]
    volumeMounts:
      - mountPath: /etc/data
        name: my-hostpath-volume
  
  volumes:
    - name: my-hostpath-volume
      hostPath:
        path: /tmp
