kubernetes/nfs-client.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nfs-pod

spec:
  containers:
  - name: nfs-container
    image: busybox
    args: ["tail", "-f", "/dev/null"]
    volumeMounts:
      - mountPath: /mnt
        name: nfs-volume
  
  volumes:
    - name: nfs-volume
      nfs:
        path: /
        server: {NFS_SERVICE_IP}
