kubernetes/volume-mount-configmap.yaml
apiVersion: v1
kind: Pod
metadata:
  name: configmap-volume-pod

spec:
  containers:
  - name: my-container
    image: busybox
    args: ["tail", "-f", "/dev/null"]
    volumeMounts:
      - name: configmap-volume
        mountPath: /etc/config

  volumes:
    - name: configmap-volume
      configMap:
        name: start-k8s
        items:
          - key: k8s
            path: k8s_fullname
