kubernetes/nfs-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nfs-server

spec:
  selector:
    matchLabels:
      role: nfs-server
  
  template:
    metadata:
      labels:
        role: nfs-server
    
    spec:
      containers:
      - name: nfs-server
        image: gcr.io/google_containers/volume-nfs:0.8
        ports:
          - containerPort: 2049
          - containerPort: 20048
          - containerPort: 111
        securityContext:
          privileged: true

---

kind: Service
apiVersion: v1
metadata:
  name:  nfs-service

spec:
  selector:
    role: nfs-server
  
  ports:
  - name:  nfs
    port:  2049
  - name: mountd
    port: 20048
  - name: rpcbind
    port: 111
