kubernetes/ingress-demo-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /

spec:
  rules:
    - host: hello-worldapp.com
      http:
        paths:
          - path: /hello
            pathType: Prefix
            backend:
              service:
                name: ingress-demo
                port:
                  number: 80
